# protege-launcher

./: .gitignore  Makefile.am  README.md  configure.ac
helpers/: prepare-jre.sh
lib/: compat.h  dlopen.c  dlopen.compat.h  xmem.c  xmem.h
m4/: notch.m4
src/: java.c  java.h  options.c  options.h  protege.c  util.c  util.h  winres.rc.in
